# stats_test_from_scratch

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  REQUIREMENTS.txt  categorical_tests.py  multi_group_tests.py  pyproject.toml  rank_tests.py  requirements.txt  sample_tests.py  test_requirements.py  utils.py
.github/: pull_request_template.md
.github/workflows/: linter.yml  main.yml
StatsTest/: __init__.py  categorical_tests.py  correlation_tests.py  gof_tests.py  multi_group_tests.py  outliers_test.py  outliers_tests.py  post_hoc_tests.py  proportion_test.py  proportion_tests.py  rank_tests.py  residuals_test.py  sample_tests.py  utils.py
src/: categorical_tests.py  sample_tests.py  utils.py
test/: test_categorical_tests.py  test_correlation_tests.py  test_gof_tests.py  test_multi_group_tests.py  test_outliers_tests.py  test_post_hoc_tests.py  test_proportion_test.py  test_rank_tests.py  test_sample_tests.py  test_utils.py
