[project]
name = "stats-test-from-scratch"
version = "0.1.0"
description = "Implementing Statistical Tests through Python"
authors = [
    {name = "ConorMcNamara",email = "conor.s.mcnamara@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "statsmodels (>=0.14.4,<0.15.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "api (>=0.0.7,<0.0.8)",
    "stats (>=0.1.2a0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["StatsTest", '.']

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
fixable = ["ALL"]

