[project]
name = "stats-test-from-scratch"
version = "0.1.0"
description = "Implementing Statistical Tests through Python from scratch"
authors = [
    {name = "ConorMcNamara", email = "conor.s.mcnamara@gmail.com"}
]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
keywords = ["statistics", "statistical-tests", "hypothesis-testing", "data-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.4",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/ConorMcNamara/stats_test_from_scratch"
Repository = "https://github.com/ConorMcNamara/stats_test_from_scratch"
Issues = "https://github.com/ConorMcNamara/stats_test_from_scratch/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["StatsTest*"]

# ============================================================================
# Poetry Configuration
# ============================================================================
# Poetry requires these fields even in PEP 621 mode
[tool.poetry]
name = "stats-test-from-scratch"
version = "0.1.0"
description = "Implementing Statistical Tests through Python from scratch"
authors = ["ConorMcNamara <conor.s.mcnamara@gmail.com>"]
packages = [{include = "StatsTest"}]
readme = "README.md"
license = "GPL-3.0-or-later"

# Dependencies are read from [project] and [project.optional-dependencies]

# ============================================================================
# uv Configuration
# ============================================================================
# uv users can use: uv pip install -e .
# uv automatically reads the [project] dependencies above
[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.uv.sources]
# Optional: specify index URLs or custom sources

[tool.pytest.ini_options]
pythonpath = ["StatsTest", "."]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=StatsTest",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
    ".venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function call in argument defaults
    "B904",  # raise from within except without explicit exception
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["ARG", "S101"]  # Allow assert and unused arguments in tests

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["StatsTest"]
omit = ["test/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

